--- a/src/components/ProductsCard/ProductsCard.scss
+++ b/src/components/ProductsCard/ProductsCard.scss
@@ -5,8 +5,11 @@
   flex-direction: column;
   box-shadow: 0px 10px 22px -5px rgba(0, 0, 0, 0.75);
   margin-bottom: 20px;
-  &.img {
-    object-fit: contain;
+  .card-image {
+    background-color: white;
+    width: 350px;
+    height: 220px;
+    object-fit: cover;
   }
 
   //   .card-image {
@@ -23,6 +26,8 @@
 
   .card--hearth {
     margin-left: 10px;
+    cursor: pointer;
+    transition: all 0.5s ease;
   }
 
   .card-desc {
