--- a/src/pages/ProductsPage.scss
+++ b/src/pages/ProductsPage.scss
@@ -26,11 +26,16 @@ main {
     margin-bottom: 10px;
   }
 
-  article {
+  .products__article {
     flex: 2;
+    display: flex;
+    flex-direction: column;
+    align-self: baseline;
+  }
+
+  .article-items {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    align-self: baseline;
   }
 }
